// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetoxLogFinalizer createEventStream should create a stream of Chrome Trace format events 1`] = `
[
  {
    "args": {
      "name": "primary",
    },
    "name": "process_name",
    "ph": "M",
    "pid": 1234,
    "tid": 0,
    "ts": 1672531200000000,
  },
  {
    "args": {
      "sort_index": 0,
    },
    "name": "process_sort_index",
    "ph": "M",
    "pid": 1234,
    "tid": 0,
    "ts": 1672531200000000,
  },
  {
    "args": {
      "name": "main",
    },
    "name": "thread_name",
    "ph": "M",
    "pid": 1234,
    "tid": 0,
    "ts": 1672531200000000,
  },
  {
    "args": {
      "sort_index": 0,
    },
    "name": "thread_sort_index",
    "ph": "M",
    "pid": 1234,
    "tid": 0,
    "ts": 1672531200000000,
  },
  {
    "args": {
      "level": 30,
      "v": 0,
    },
    "cat": "main",
    "name": "msg1",
    "ph": "i",
    "pid": 1234,
    "tid": 0,
    "ts": 1672531200000000,
  },
  {
    "args": {
      "name": "secondary",
    },
    "name": "process_name",
    "ph": "M",
    "pid": 1234,
    "tid": 0,
    "ts": 1672531200500000,
  },
  {
    "args": {
      "sort_index": 1,
    },
    "name": "process_sort_index",
    "ph": "M",
    "pid": 1234,
    "tid": 0,
    "ts": 1672531200500000,
  },
  {
    "args": {
      "level": 30,
      "v": 0,
    },
    "cat": "parallel",
    "name": "long-duration",
    "ph": "B",
    "pid": 1234,
    "tid": 0,
    "ts": 1672531200500000,
  },
  {
    "args": {
      "id": 1,
      "level": 10,
      "v": 0,
    },
    "cat": "parallel",
    "name": "duration1",
    "ph": "B",
    "pid": 1234,
    "tid": 0,
    "ts": 1672531201000000,
  },
  {
    "args": {
      "level": 20,
      "v": 0,
    },
    "cat": "undefined",
    "name": "instant event",
    "ph": "i",
    "pid": 1234,
    "tid": 0,
    "ts": 1672531201000000,
  },
  {
    "args": {
      "id": 1,
      "level": 10,
      "v": 0,
    },
    "cat": "parallel",
    "name": "duration1:stacked",
    "ph": "B",
    "pid": 1234,
    "tid": 0,
    "ts": 1672531201100000,
  },
  {
    "args": {
      "id": 1,
      "level": 10,
      "v": 0,
    },
    "cat": "parallel",
    "ph": "E",
    "pid": 1234,
    "tid": 0,
    "ts": 1672531201400000,
  },
  {
    "args": {
      "name": "parallel",
    },
    "name": "thread_name",
    "ph": "M",
    "pid": 1234,
    "tid": 1,
    "ts": 1672531201500000,
  },
  {
    "args": {
      "sort_index": 1,
    },
    "name": "thread_sort_index",
    "ph": "M",
    "pid": 1234,
    "tid": 1,
    "ts": 1672531201500000,
  },
  {
    "args": {
      "id": 2,
      "level": 10,
      "v": 0,
    },
    "cat": "parallel",
    "name": "duration2",
    "ph": "B",
    "pid": 1234,
    "tid": 1,
    "ts": 1672531201500000,
  },
  {
    "args": {
      "id": 1,
      "level": 10,
      "v": 0,
    },
    "cat": "parallel",
    "ph": "E",
    "pid": 1234,
    "tid": 0,
    "ts": 1672531202000000,
  },
  {
    "args": {
      "level": 10,
      "v": 0,
    },
    "cat": "parallel",
    "ph": "E",
    "pid": 1234,
    "tid": 0,
    "ts": 1672531202250000,
  },
  {
    "args": {
      "id": 2,
      "level": 10,
      "v": 0,
    },
    "cat": "parallel",
    "ph": "E",
    "pid": 1234,
    "tid": 1,
    "ts": 1672531202500000,
  },
]
`;

exports[`DetoxLogFinalizer finalize should convert JSONL logs to Chrome Trace format: chrome-trace 1`] = `
[
  {
    "args": {
      "name": "primary",
    },
    "name": "process_name",
    "ph": "M",
    "pid": 1234,
    "tid": 0,
    "ts": 1672531200000000,
  },
  {
    "args": {
      "sort_index": 0,
    },
    "name": "process_sort_index",
    "ph": "M",
    "pid": 1234,
    "tid": 0,
    "ts": 1672531200000000,
  },
  {
    "args": {
      "name": "main",
    },
    "name": "thread_name",
    "ph": "M",
    "pid": 1234,
    "tid": 0,
    "ts": 1672531200000000,
  },
  {
    "args": {
      "sort_index": 0,
    },
    "name": "thread_sort_index",
    "ph": "M",
    "pid": 1234,
    "tid": 0,
    "ts": 1672531200000000,
  },
  {
    "args": {
      "level": 30,
      "v": 0,
    },
    "cat": "main",
    "name": "msg1",
    "ph": "i",
    "pid": 1234,
    "tid": 0,
    "ts": 1672531200000000,
  },
  {
    "args": {
      "name": "secondary",
    },
    "name": "process_name",
    "ph": "M",
    "pid": 1235,
    "tid": 0,
    "ts": 1672531200500000,
  },
  {
    "args": {
      "sort_index": 1,
    },
    "name": "process_sort_index",
    "ph": "M",
    "pid": 1235,
    "tid": 0,
    "ts": 1672531200500000,
  },
  {
    "args": {
      "name": "parallel",
    },
    "name": "thread_name",
    "ph": "M",
    "pid": 1235,
    "tid": 3,
    "ts": 1672531200500000,
  },
  {
    "args": {
      "sort_index": 3,
    },
    "name": "thread_sort_index",
    "ph": "M",
    "pid": 1235,
    "tid": 3,
    "ts": 1672531200500000,
  },
  {
    "args": {
      "level": 30,
      "v": 0,
    },
    "cat": "parallel",
    "name": "long-duration",
    "ph": "B",
    "pid": 1235,
    "tid": 3,
    "ts": 1672531200500000,
  },
  {
    "args": {
      "name": "parallel",
    },
    "name": "thread_name",
    "ph": "M",
    "pid": 1234,
    "tid": 1,
    "ts": 1672531201000000,
  },
  {
    "args": {
      "sort_index": 1,
    },
    "name": "thread_sort_index",
    "ph": "M",
    "pid": 1234,
    "tid": 1,
    "ts": 1672531201000000,
  },
  {
    "args": {
      "id": 1,
      "level": 10,
      "v": 0,
    },
    "cat": "parallel",
    "name": "duration1",
    "ph": "B",
    "pid": 1234,
    "tid": 1,
    "ts": 1672531201000000,
  },
  {
    "args": {
      "name": "undefined",
    },
    "name": "thread_name",
    "ph": "M",
    "pid": 1235,
    "tid": 4,
    "ts": 1672531201000000,
  },
  {
    "args": {
      "sort_index": 4,
    },
    "name": "thread_sort_index",
    "ph": "M",
    "pid": 1235,
    "tid": 4,
    "ts": 1672531201000000,
  },
  {
    "args": {
      "level": 20,
      "v": 0,
    },
    "cat": "undefined",
    "name": "instant event",
    "ph": "i",
    "pid": 1235,
    "tid": 4,
    "ts": 1672531201000000,
  },
  {
    "args": {
      "id": 1,
      "level": 10,
      "v": 0,
    },
    "cat": "parallel",
    "name": "duration1:stacked",
    "ph": "B",
    "pid": 1234,
    "tid": 1,
    "ts": 1672531201100000,
  },
  {
    "args": {
      "id": 1,
      "level": 10,
      "v": 0,
    },
    "cat": "parallel",
    "ph": "E",
    "pid": 1234,
    "tid": 1,
    "ts": 1672531201400000,
  },
  {
    "args": {
      "name": "parallel",
    },
    "name": "thread_name",
    "ph": "M",
    "pid": 1234,
    "tid": 2,
    "ts": 1672531201500000,
  },
  {
    "args": {
      "sort_index": 2,
    },
    "name": "thread_sort_index",
    "ph": "M",
    "pid": 1234,
    "tid": 2,
    "ts": 1672531201500000,
  },
  {
    "args": {
      "id": 2,
      "level": 10,
      "v": 0,
    },
    "cat": "parallel",
    "name": "duration2",
    "ph": "B",
    "pid": 1234,
    "tid": 2,
    "ts": 1672531201500000,
  },
  {
    "args": {
      "id": 1,
      "level": 10,
      "v": 0,
    },
    "cat": "parallel",
    "ph": "E",
    "pid": 1234,
    "tid": 1,
    "ts": 1672531202000000,
  },
  {
    "args": {
      "level": 10,
      "v": 0,
    },
    "cat": "parallel",
    "ph": "E",
    "pid": 1235,
    "tid": 3,
    "ts": 1672531202250000,
  },
  {
    "args": {
      "id": 2,
      "level": 10,
      "v": 0,
    },
    "cat": "parallel",
    "ph": "E",
    "pid": 1234,
    "tid": 2,
    "ts": 1672531202500000,
  },
]
`;

exports[`DetoxLogFinalizer finalize should convert JSONL logs to Chrome Trace format: plain 1`] = `
"2023-01-01T00:00:00.000Z detox[1234] i main msg1
2023-01-01T00:00:00.500Z detox[1235] B parallel long-duration
2023-01-01T00:00:01.000Z detox[1234] B parallel@1 duration1
2023-01-01T00:00:01.000Z detox[1235] i  instant event
2023-01-01T00:00:01.100Z detox[1234] B parallel@1 duration1:stacked
2023-01-01T00:00:01.400Z detox[1234] E parallel@1 duration1:stacked
2023-01-01T00:00:01.500Z detox[1234] B parallel@2 duration2
2023-01-01T00:00:02.000Z detox[1234] E parallel@1 duration1
2023-01-01T00:00:02.250Z detox[1235] E parallel long-duration
2023-01-01T00:00:02.500Z detox[1234] E parallel@2 duration2
"
`;
